Fix display when answer wraps.

--- a/Styles/wanikani_kanji.scss
+++ b/Styles/wanikani_kanji.scss
@@ -15,7 +15,7 @@
                       line-height: 1.25; }
 
       .meaning { font-size: 30pt;
-                 line-height: .6;
+                 line-height: .9;
                  padding-bottom: 18px;
                  vocab { color: white;
                        margin-right: 10px; } }
